--- a/recognizer/src/main/AndroidManifest.xml
+++ b/recognizer/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:name=".MyApp"
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
