--- a/recognizer/build.gradle
+++ b/recognizer/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
 
         applicationId "uestc.xfj.recognizer"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'info.hoang8f:fbutton:1.0.5'
+    compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
     compile project(':galleryfinal')
     compile project(':catloadinglibrary')
