--- a/recognizer/build.gradle
+++ b/recognizer/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'info.hoang8f:fbutton:1.0.5'
     compile 'com.android.support:design:24.2.1'
+    compile 'hanks.xyz:htextview-library:0.1.5'
     testCompile 'junit:junit:4.12'
     compile project(':galleryfinal')
     compile project(':catloadinglibrary')
