--- a/recognizer/build.gradle
+++ b/recognizer/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile 'info.hoang8f:fbutton:1.0.5'
     compile 'com.android.support:design:24.2.1'
     compile 'hanks.xyz:htextview-library:0.1.5'
+    compile 'com.github.clans:fab:1.6.4'
+    compile 'me.shaohui.advancedluban:library:1.2.5'
     testCompile 'junit:junit:4.12'
     compile project(':galleryfinal')
     compile project(':catloadinglibrary')
